<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".views.MapsActivity"
    >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.MapsActivity"
        />

    <android.support.v7.widget.Toolbar
        android:id="@+id/mapsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/underline"
        android:minHeight="?attr/actionBarSize"
        android:textStyle="bold"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/zero">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/backToMainButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:background="@drawable/button_pressed"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/rsrPechhulp"
                android:textAllCaps="false"
                android:textColor="@color/title_color"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/backToMainButtonImage"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:foregroundGravity="left"
                android:src="@drawable/main_btn_arrow"
                android:layout_gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:contentDescription="@string/backToMainButtonImageDesc" />

        </FrameLayout>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="bottom|center"
        android:background="@color/colorPrimary">


        <Button
            android:id="@+id/openCallDialog"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="@dimen/ButtonHeight"
            android:text="@string/openCallDialogTitle"
            android:textAllCaps="false"
            android:textColor="@color/title_color"
            android:textSize="@dimen/buttonTextSize"
            android:layout_margin="0dp"
            android:layout_gravity="center"
            android:background="@drawable/button_pressed_underline"/>

        <ImageView
            android:id="@+id/openCallDialogView"
            android:layout_width="@dimen/buttonViewSize"
            android:layout_height="@dimen/buttonViewSize"
            android:foregroundGravity="left"
            app:srcCompat="@drawable/ic_btn_phone"
            android:paddingStart="14dp"
            android:paddingTop="5dp"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:contentDescription="@string/openCallDialogViewDesc" />

    </FrameLayout>
</FrameLayout>
