<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity"
    android:background="@drawable/main_bg"
    android:screenOrientation="portrait">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/underline"
        android:minHeight="?attr/actionBarSize"
        android:textStyle="bold"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/mainToolbarText"
        app:titleTextColor="@color/title_color">

        <Button
            android:id="@+id/infoButtonTablet"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
           />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/infoImageButton"
                android:layout_width="@dimen/infoImageButtonSize"
                android:layout_height="@dimen/infoImageButtonSize"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:background="@color/invisible"
                app:srcCompat="@drawable/main_info"
                android:scaleType="fitXY"
                android:contentDescription="@string/infoImageButtonDesc" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/mainToolbarText"
                android:textColor="@color/title_color"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimary">


        <Button
            android:id="@+id/openMapButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="@dimen/ButtonHeight"
            android:text="@string/rsrPechhulp"
            android:textAllCaps="false"
            android:textColor="@color/title_color"
            android:textSize="@dimen/buttonTextSize"
            android:layout_margin="@dimen/zero"
            android:layout_gravity="center"
            android:background="@drawable/button_pressed_underline"/>

        <ImageView
            android:contentDescription="@string/openMapButtonView"
            android:id="@+id/openMapButtonView"
            android:layout_width="@dimen/ButtonViewSize"
            android:layout_height="@dimen/buttonViewSize"
            android:foregroundGravity="left|center_vertical"
            app:srcCompat="@drawable/main_btn_warning"
            android:paddingStart="14dp"
            android:paddingTop="5dp"
            android:paddingBottom="@dimen/zero"
            android:paddingEnd="@dimen/zero"
            />
    </FrameLayout>


</android.support.constraint.ConstraintLayout>